Prevent horizontal scrolling on index page [BLOG-11]
... and tweak a few other CSS things.

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -4,16 +4,15 @@
 @import "elements.css";
 @import "pygments.css";
 
-.width-max-content {
-  width: max-content;
-}
-
 .posts-li-title {
   font-size: 1.35rem;
+  line-height: 1.8rem;
 }
 
 .posts-li-subtitle {
   color: var(--text-color) !important;
+  font-size: 16px;
+  line-height: 1.6rem;
 }
 
 .posts-li-date {
